重构(agent): 调整核心Agent类位置并清理相关结构